# AI-Creator

./: .gitignore  CMakeLists.txt  Makefile  README.md  preBuild  run.bat  run.sh
bootstrap/: bootstrap.sh
build-scripts/: main.bat  main.sh
build-scripts/t/: test.bat
build_scripts/: config.mk  os-specific.mk  targets.mk
debug/: main
release/: main
scripts/: chmod.xsh  main.xsh  mkdir.xsh
scripts/t/: test.xsh
src/: aidata.c  aidata.h  data.c  data.cpp  data.h  file.c  file.cpp  file.h  main.cpp  metadata.c  metadata.h  save.cpp  save.hpp
src/aidata/: ruleset.c  ruleset.h
src/cli/: cli.c  cli.cpp  cli.h  cli.hpp  colors.cpp  colors.hpp
src/data/: aidata.hpp  data.cpp  data.hpp  metadata.hpp
src/data/aidata/: ruleset.hpp
src/os/: os.c  os.h
src/storage/: aidata.c  aidata.h  data.c  data.cpp  data.h  file.c  file.cpp  file.h  metadata.c  metadata.h  storage.h  storage.hpp
src/storage/aidata/: ruleset.c  ruleset.h
toolchain/: main.ts  setup.ts
toolchain/bootstrap/: bootstrap.bat  bootstrap.sh
toolchain/deno-setup/: deno-setup.bat
toolchain/extendedshell/: batch.js  main.js  main.ts  shell.js
toolchain/files/: folder.ts
toolchain/install/: download.ts  files.ts  libs.ts  main.ts  tools.ts
toolchain/scripts/: chmod.xsh  main.xsh  mkdir.xsh
toolchain/setup/: libs.ts  setup.ts  tools.ts  util.ts
toolchain/utils/: folder.js
